feat: add auth ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main>
-  <h1 class="text-6xl font-light">hello world</h1>
-</main>
-
-<router-outlet />
+<app-header></app-header>
+<app-main>
+  <router-outlet />
+</app-main>
+<app-footer></app-footer>
