--- a/src/app/core/layouts/main/main.component.html
+++ b/src/app/core/layouts/main/main.component.html
@@ -1,3 +1,3 @@
-<main class="max-w-screen-md mx-auto px-6 py-4 flex flex-col h-full">
+<main class="max-w-screen-md mx-auto px-6 py-4 w-full grow flex flex-col">
   <ng-content />
 </main>
