feat: implement auth guards

--- a/src/app/core/auth/components/auth-form/auth-form.component.html
+++ b/src/app/core/auth/components/auth-form/auth-form.component.html
@@ -12,6 +12,7 @@
   <form
     (ngSubmit)="handleSubmit()"
     [formGroup]="authForm"
+    [action]="'#'"
     class="flex flex-col gap-6"
   >
     <mat-form-field appearance="fill">
