--- a/src/app/core/auth/pages/login/login.component.html
+++ b/src/app/core/auth/pages/login/login.component.html
@@ -4,4 +4,5 @@
   redirectLink="/auth/register"
   redirectLinkLabel="Don't have an account? Register"
   submitButtonLabel="Login"
+  (formSubmit)="handleLogin($event)"
 />
