--- a/src/app/core/auth/pages/register/register.component.html
+++ b/src/app/core/auth/pages/register/register.component.html
@@ -4,4 +4,5 @@
   redirectLink="/auth/login"
   redirectLinkLabel="Have an account? Login"
   submitButtonLabel="Register"
+  (formSubmit)="handleRegister($event)"
 />
